--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Add Docker repo
   apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/debian buster stable
+    repo: deb [arch=amd64] https://download.docker.com/linux/debian bullseye stable
     filename: docker
     state: present
 
