--- a/roles/plex/defaults/main.yml
+++ b/roles/plex/defaults/main.yml
@@ -1,4 +1,5 @@
 plex:
+  docker_network: "plex"
   port: 32400
   advertise_ip: "http://{{ ansible_facts.enp0s25.ipv4.address }}:32400/"
   claim_code: claim-aaaaaaaaaaaaaaaaaaaa
