Force Pihole to use an upstream DNS resolver for itself, instead of using the host's config which points at Pihole itself and causes problems for Pihole

--- a/roles/router/tasks/pihole.yml
+++ b/roles/router/tasks/pihole.yml
@@ -22,6 +22,8 @@
       DNSMASQ_USER: pihole
       WEBPASSWORD: "{{ pihole.password }}"
       VIRTUAL_HOST: "{{ pihole.hostname }}"
+    dns_servers:
+      - 1.1.1.1
     networks:
       - name: "{{ services_docker_network }}"
     ports:
