--- a/roles/unifi/tasks/main.yml
+++ b/roles/unifi/tasks/main.yml
@@ -31,6 +31,7 @@
     networks:
       - name: "{{ services_docker_network }}"
     ports:
+      - "{{ unifi_controller.port.http_and_adoption }}:8080"
       - "{{ unifi_controller.port.http_guest_portal }}:8880"
       - "{{ unifi_controller.port.https_guest_portal }}:8843"
       - '6789:6789'
