--- a/roles/plex/tasks/main.yml
+++ b/roles/plex/tasks/main.yml
@@ -35,7 +35,7 @@
     env:
       PLEX_UID: "{{ plex_user.uid }}"
       PLEX_GID: "{{ plex_user.group }}"
-      TZ: America/Los_Angeles
+      TZ: "{{ timezone }}"
       ADVERTISE_IP: "{{ plex.advertise_ip }}"
       PLEX_CLAIM: "{{ plex.claim_code }}"
     devices:
